--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_fonts: ^6.1.0
   nes_ui: ^0.13.0
   provider: ^6.1.1
+  flutter_animate: ^4.4.0
 
 dev_dependencies:
   flutter_test:
