--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,10 @@ dependencies:
   logger: ^2.0.2+1
   gap: ^3.0.1
   google_fonts: ^6.1.0
-  nes_ui: ^0.14.0
+  nes_ui: ^0.15.0
   provider: ^6.1.1
   flutter_animate: ^4.4.0
+  firebase_core: ^2.25.4
 
 dev_dependencies:
   flutter_test:
