--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  assets:
+    - 'assets/images/'
+    - 'assets/data/'
+
 fonts:
   - family: 'ArcadeYA'
     fonts:
