--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   provider: ^6.1.1
   flutter_animate: ^4.4.0
   firebase_core: ^2.25.4
+  firebase_remote_config: ^4.3.14
+  firebase_analytics: ^10.8.6
 
 dev_dependencies:
   flutter_test:
