--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,13 @@ dependencies:
   logger: ^2.0.2+1
   gap: ^3.0.1
   google_fonts: ^6.1.0
-  nes_ui: ^0.15.0
+  nes_ui: ^0.16.0
   provider: ^6.1.1
   flutter_animate: ^4.4.0
   firebase_core: ^2.25.4
   firebase_remote_config: ^4.3.14
   firebase_analytics: ^10.8.6
+  firebase_crashlytics: ^3.4.15
 
 dev_dependencies:
   flutter_test:
