--- a/docs/rapidweaver.rwc/Resources/79052736-511E-4131-8843-7337F3C8F66C/Contents.plist
+++ b/docs/rapidweaver.rwc/Resources/79052736-511E-4131-8843-7337F3C8F66C/Contents.plist
@@ -11,7 +11,7 @@
 			<dict/>
 			<key>Files</key>
 			<array>
-				<string>Readme.TXT</string>
+				<string>ARCADE_I.woff2</string>
 			</array>
 			<key>Subsandwiches</key>
 			<array/>
