--- a/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
+++ b/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
@@ -30,6 +30,92 @@
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
+					<key>file:///Users/chrisstayte/SourceControl/beltofdestiny/docs/</key>
+					<dict>
+						<key>CreationDate</key>
+						<date>2024-02-24T23:06:15Z</date>
+						<key>DigestAlgorithm</key>
+						<string>MD5</string>
+						<key>PageDigests</key>
+						<dict>
+							<key>files/bs-fonts/bootstrap-icons.woff</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								UhlihN4fy1sE
+								TwAadUgtug==
+								</data>
+								<key>Size</key>
+								<integer>164352</integer>
+							</dict>
+							<key>files/bs-fonts/bootstrap-icons.woff2</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								f0d2M93RL4Qo
+								RlTyouibig==
+								</data>
+								<key>Size</key>
+								<integer>121296</integer>
+							</dict>
+							<key>files/foundry-cc-edit-mode-icon.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NsaK1kaVjAFZ
+								R6qmyy6QKg==
+								</data>
+								<key>Size</key>
+								<integer>74241</integer>
+							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wANifJ2yGeIS
+								vLjVRAp1mw==
+								</data>
+								<key>Size</key>
+								<integer>1296</integer>
+							</dict>
+							<key>files/stacks_page_page0.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3J0c/7xtawGu
+								JTnD+BNw4g==
+								</data>
+								<key>Size</key>
+								<integer>112200</integer>
+							</dict>
+							<key>files/stacks_page_page0.js</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								egHlEp2+X1RE
+								Sync0d9snA==
+								</data>
+								<key>Size</key>
+								<integer>962</integer>
+							</dict>
+							<key>index.html</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								H0QybVh84l6U
+								IMxnATtGGg==
+								</data>
+								<key>Size</key>
+								<integer>4778</integer>
+							</dict>
+						</dict>
+						<key>PageID</key>
+						<string>page0</string>
+						<key>SiteRoot</key>
+						<string></string>
+						<key>Version</key>
+						<integer>3</integer>
+					</dict>
 					<key>file:///Users/chrisstayte/SourceControl/beltofdestiny/front_page/</key>
 					<dict>
 						<key>CreationDate</key>
