--- a/docs/rapidweaver.rwc/Resources/67F03B3E-9AD0-4D53-9B1F-26A938F672C3/Contents.plist
+++ b/docs/rapidweaver.rwc/Resources/67F03B3E-9AD0-4D53-9B1F-26A938F672C3/Contents.plist
@@ -11,7 +11,7 @@
 			<dict/>
 			<key>Files</key>
 			<array>
-				<string>ARCADE_R.TTF</string>
+				<string>ARCADE_R.woff2</string>
 			</array>
 			<key>Subsandwiches</key>
 			<array/>
