--- a/docs/rapidweaver.rwc/Resources/77A58984-9E78-4DCB-8E07-5196BE982523/Contents.plist
+++ b/docs/rapidweaver.rwc/Resources/77A58984-9E78-4DCB-8E07-5196BE982523/Contents.plist
@@ -11,7 +11,7 @@
 			<dict/>
 			<key>Files</key>
 			<array>
-				<string>ARCADE_N.TTF</string>
+				<string>ARCADE_N.woff2</string>
 			</array>
 			<key>Subsandwiches</key>
 			<array/>
