Update consolidated.css and stacks.css links to use a new cache version. Update bootstrap.min.css link to use a new cache version. Update stacks_page_page0.css link to use a new cache version. Update bootstrap.bundle.min.js link to use a new cache version. Update stacks_page_page0.js link to use a new cache version. Update the href attribute of the "Play Web Version" button to point to https://game.beltofdestiny.com instead of game.beltofdestiny.com. Update javascript.js link in index.html file to use a new cache version.
- Updated CSS and JavaScript files with new cache versions
- Updated "Play Web Version" button URL

--- a/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
+++ b/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
@@ -33,7 +33,7 @@
 					<key>file:///Users/chrisstayte/SourceControl/beltofdestiny/docs/</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-02-24T23:06:15Z</date>
+						<date>2024-02-24T23:07:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								H0QybVh84l6U
-								IMxnATtGGg==
+								RLRZkmig+A+A
+								xfFe+GkLhg==
 								</data>
 								<key>Size</key>
-								<integer>4778</integer>
+								<integer>4786</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
