--- a/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
+++ b/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
@@ -33,7 +33,7 @@
 					<key>file:///Users/chrisstayte/SourceControl/beltofdestiny/docs/</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-02-24T23:07:37Z</date>
+						<date>2024-02-24T23:09:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,8 +82,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3J0c/7xtawGu
-								JTnD+BNw4g==
+								vueMgGL2ac4T
+								5Mv66LwvQA==
 								</data>
 								<key>Size</key>
 								<integer>112200</integer>
