--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_remote_config: ^4.3.14
   firebase_analytics: ^10.8.6
   firebase_crashlytics: ^3.4.15
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
