--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   logger: ^2.0.2+1
   gap: ^3.0.1
   google_fonts: ^6.1.0
-  nes_ui: ^0.16.0
+  nes_ui: ^0.17.0
   provider: ^6.1.1
   flutter_animate: ^4.4.0
   firebase_core: ^2.25.4
@@ -29,6 +29,7 @@ dependencies:
   firebase_crashlytics: ^3.4.15
   url_launcher: ^6.2.5
   logging: ^1.2.0
+  package_info_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
