feat: Update Firebase dependencies and add game achievements
- Updated firebase_analytics to version 10.8.7
- Updated firebase_core to version 2.25.5
- Updated firebase_crashlytics to version 3.4.16
- Updated firebase_remote_config to version 4.3.15
- Added game achievements for scores above 10K, 50K, and 100K

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   go_router: ^13.0.1
   flame: ^1.14.0
   flame_audio: ^2.1.7
-  logger: ^2.0.2+1
   gap: ^3.0.1
   google_fonts: ^6.1.0
   nes_ui: ^0.17.0
@@ -41,17 +40,18 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
   assets:
     - 'assets/images/'
     - 'assets/data/'
-
-fonts:
-  - family: 'ArcadeYA'
-    fonts:
-      - asset: 'assets/fonts/arcade_ya/ARCADE_I.TTF'
-        style: italic
-      - asset: 'assets/fonts/arcade_ya/ARCADE_N.TTF'
+  fonts:
+    - family: 'ArcadeYA'
+      fonts:
+        - asset: 'assets/fonts/arcade_ya/ARCADE_I.TTF'
+          style: italic
+        - asset: 'assets/fonts/arcade_ya/ARCADE_N.TTF'
+    - family: 'PressStart2P'
+      fonts:
+        - asset: 'assets/fonts/press_start_2p/PressStart2P-Regular.ttf'
 
 flutter_launcher_icons:
   android: true
