--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   logging: ^1.2.0
   package_info_plus: ^5.0.1
   games_services: ^4.0.1
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +44,7 @@ flutter:
   assets:
     - 'assets/images/'
     - 'assets/data/'
+    - 'assets/music/'
   fonts:
     - family: 'ArcadeYA'
       fonts:
