feat: Add new music and sound effects
- Added a new music track "chiptune-grooving-142242.mp3"
- Added new sound effects for various game events
- Updated the audio provider to play the new sound effects
- Preloaded all sound effects for better performance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
     - 'assets/images/'
     - 'assets/data/'
     - 'assets/music/'
+    - 'assets/sfx/'
   fonts:
     - family: 'ArcadeYA'
       fonts:
