--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,12 +32,12 @@
 
         <meta-data
             android:name="com.google.android.gms.games.APP_ID"
-            android:value="app_id" />
+            android:value="787825835957" />
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-            
+
     </application>
     <!-- Provide required visibility configuration for API level 30 and above -->
     <queries>
