--- a/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
+++ b/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
@@ -33,7 +33,7 @@
 					<key>file:///Users/chrisstayte/SourceControl/beltofdestiny/docs/</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-02-24T23:09:44Z</date>
+						<date>2024-03-01T06:00:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -57,6 +57,26 @@
 								</data>
 								<key>Size</key>
 								<integer>121296</integer>
+							</dict>
+							<key>files/drag-and-drop-img-60.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hLdFv3C66u6c
+								8tUpIsZ5+g==
+								</data>
+								<key>Size</key>
+								<integer>43228</integer>
+							</dict>
+							<key>files/drag-and-drop-img-69.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								HpHQLPWpAvOP
+								KSPABteSgQ==
+								</data>
+								<key>Size</key>
+								<integer>4904</integer>
 							</dict>
 							<key>files/foundry-cc-edit-mode-icon.png</key>
 							<dict>
@@ -82,18 +102,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vueMgGL2ac4T
-								5Mv66LwvQA==
+								u5U4puL/1YiA
+								Ex1FOtF89A==
 								</data>
 								<key>Size</key>
-								<integer>112200</integer>
+								<integer>120533</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								egHlEp2+X1RE
-								Sync0d9snA==
+								k4UsuYsqZ8gG
+								TCg/JDtyRQ==
 								</data>
 								<key>Size</key>
 								<integer>962</integer>
@@ -102,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RLRZkmig+A+A
-								xfFe+GkLhg==
+								w031KMy4+QDm
+								+9EUPVQ6wA==
 								</data>
 								<key>Size</key>
-								<integer>4786</integer>
+								<integer>12256</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
