--- a/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
+++ b/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
@@ -33,7 +33,7 @@
 					<key>file:///Users/chrisstayte/SourceControl/beltofdestiny/docs/</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-03-01T06:00:42Z</date>
+						<date>2024-03-11T12:33:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,8 +122,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w031KMy4+QDm
-								+9EUPVQ6wA==
+								IvMNYDJDpYYK
+								S4HLHojnYw==
 								</data>
 								<key>Size</key>
 								<integer>12256</integer>
