--- a/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
+++ b/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
@@ -33,7 +33,7 @@
 					<key>file:///Users/chrisstayte/SourceControl/beltofdestiny/docs/</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-03-11T12:33:16Z</date>
+						<date>2024-03-11T12:33:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								u5U4puL/1YiA
-								Ex1FOtF89A==
+								d1jPfkU+73tP
+								v4nVEDy+1Q==
 								</data>
 								<key>Size</key>
-								<integer>120533</integer>
+								<integer>120251</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IvMNYDJDpYYK
-								S4HLHojnYw==
+								X4hx8pYITwQI
+								NhafYuSTfA==
 								</data>
 								<key>Size</key>
-								<integer>12256</integer>
+								<integer>11595</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
