Updated image link

--- a/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
+++ b/docs/rapidweaver.rwc/Pages/1-home/Contents.plist
@@ -33,7 +33,7 @@
 					<key>file:///Users/chrisstayte/SourceControl/beltofdestiny/docs/</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-03-11T12:33:42Z</date>
+						<date>2024-03-11T12:54:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X4hx8pYITwQI
-								NhafYuSTfA==
+								gDjqByXA2F09
+								mybbB/pglw==
 								</data>
 								<key>Size</key>
-								<integer>11595</integer>
+								<integer>11846</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
