--- a/docs/rapidweaver.rwc/Contents.plist
+++ b/docs/rapidweaver.rwc/Contents.plist
@@ -16,7 +16,7 @@
 					<key>page0 - file:///Users/chrisstayte/SourceControl/beltofdestiny/docs/</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2024-03-11T12:33:42Z</date>
+						<date>2024-03-11T12:54:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -105,11 +105,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X4hx8pYITwQI
-								NhafYuSTfA==
+								gDjqByXA2F09
+								mybbB/pglw==
 								</data>
 								<key>Size</key>
-								<integer>11595</integer>
+								<integer>11846</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -785,7 +785,7 @@
 				E4APgA6AEYAQXxAkNkJCOEZGMDktOTFDNi00QkJELThD
 				MDAtQTYzOUJDMzAxRjk0XkFSQ0FERV9JLndvZmYyXxAk
 				NzkwNTI3MzYtNTExRS00MTMxLTg4NDMtNzMzN0YzQzhG
-				NjZD0lUPVldXTlMudGltZSNBxc+Y01mH8IAS0jIzWVpW
+				NjZD0lUPVldXTlMudGltZSNBxc+bRWbUC4AS0jIzWVpW
 				TlNEYXRlolk30w0OD1xeYKFdgBShX4AVgBZfEDtmaWxl
 				Oi8vL1VzZXJzL2Nocmlzc3RheXRlL1NvdXJjZUNvbnRy
 				b2wvYmVsdG9mZGVzdGlueS9kb2NzLwjSMjNkZV8QE05T
@@ -796,8 +796,8 @@
 				Skpyc3R1dgiAIIAYgACAAIAegBuAGoAdgBxfECQ2NTgx
 				RTE0Ri1BMTZBLTRGOEItQkUyRi04QzdCNjBCRjI5NUZe
 				QVJDQURFX04ud29mZjJfECQ3N0E1ODk4NC05RTc4LTRE
-				Q0ItOEUwNy01MTk2QkU5ODI1MjPSVQ97VyNBxc+Y01mI
-				K4AS0w0OD36AYKF/gB+hX4AVgBZfEDtmaWxlOi8vL1Vz
+				Q0ItOEUwNy01MTk2QkU5ODI1MjPSVQ97VyNBxc+bRWbU
+				NYAS0w0OD36AYKF/gB+hX4AVgBZfEDtmaWxlOi8vL1Vz
 				ZXJzL2Nocmlzc3RheXRlL1NvdXJjZUNvbnRyb2wvYmVs
 				dG9mZGVzdGlueS9kb2NzL18QKy9Vc2Vycy9jaHJpc3N0
 				YXl0ZS9Eb3dubG9hZHMvQVJDQURFX04ud29mZjLaP0AP
@@ -805,7 +805,7 @@
 				JYAkXxAkQkY5NDY4ODctQTFCRS00MTIxLUIwQTgtOTVD
 				ODQxRjVDMDUxXkFSQ0FERV9SLndvZmYyXxAkNjdGMDNC
 				M0UtOUFEMC00RDUzLTlCMUYtMjZBOTM4RjY3MkMz0lUP
-				lFcjQcXPmNNZiESAEtMNDg+XmWChmIAnoV+AFYAWXxA7
+				lFcjQcXPm0Vm1EWAEtMNDg+XmWChmIAnoV+AFYAWXxA7
 				ZmlsZTovLy9Vc2Vycy9jaHJpc3N0YXl0ZS9Tb3VyY2VD
 				b250cm9sL2JlbHRvZmRlc3RpbnkvZG9jcy9fECsvVXNl
 				cnMvY2hyaXNzdGF5dGUvRG93bmxvYWRzL0FSQ0FERV9S
@@ -956,7 +956,7 @@
 					<key>PublishingSettingsConfigured</key>
 					<true/>
 					<key>RWBadge</key>
-					<string>{"transition":"slide","delayDistance":30,"imageAlt":"RapidWeaver Icon","delayType":"time","hiddenOnTablet":false,"enabled":false,"useDefaultImage":true,"hiddenOnDesktop":false,"hiddenOnMobile":false,"openInNewWindow":true,"colorScheme":"auto","url":"https:\/\/www.realmacsoftware.com","text":"Made in RapidWeaver","position":"bottomLeft","delayMillis":1000}</string>
+					<string>{"hiddenOnTablet":false,"imageAlt":"RapidWeaver Icon","hiddenOnMobile":false,"useDefaultImage":true,"text":"Made in RapidWeaver","transition":"slide","hiddenOnDesktop":false,"url":"https:\/\/www.realmacsoftware.com","delayDistance":30,"colorScheme":"auto","delayType":"time","enabled":false,"delayMillis":1000,"position":"bottomLeft","openInNewWindow":true}</string>
 					<key>RememberPrivacyMessageDismissed</key>
 					<false/>
 					<key>SelectedPublishingDestinationIndex</key>
